criei a pagina report.html

--- a/report.html
+++ b/report.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Conhecer a internet</title>
+    <p><a href="index.html">Programação Web</a>  <a href="report.html">A Internet e a Web</a></p>
   </head>
   <body>
     <h1>A Internet e a Web</h1>
@@ -50,9 +51,7 @@
       <img src="images/Network.png"  width="1000" height="250"><br>
       Quando clico para observar a preview aparece a parte de texto do site. <br>
       Os Headers apresentam os Response Headers e Request Headers.<br>
-      O Timing tem informações relativamente ao tempo do Resource Scheduling, Connection Start, Request e Respond.
-      
+      O Timing tem informações relativamente ao tempo do Resource Scheduling, Connection Start, Request e Respond. 
     </p>
-
   </body>
 </html>
