--- a/index.html
+++ b/index.html
@@ -1,38 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt">
-  <head>
-    <meta charset="UTF-8" />
-    <title>A minha primeira página</title>
-    <p>
-      <a href="index.html">Programação Web</a>
-      <a href="report.html">A Internet e a Web</a>
-    </p>
-  </head>
-  <body>
-    <h1>Programação Web</h1>
-    <p>
-      Na unidade curricular de
-      <a href="https://moodle.ensinolusofona.pt/course/view.php?id=1596"
-        >Programação Web</a
-      >
-      abordaremos os princípios básicos associados ao desenvolvimento para a
-      Web, tanto do lado <i>back-end</i> como <i>front-end</i>.
-    </p>
-
-    <p>Aprender-se-ão as seguintes tecnologias &#127760;:</p>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Python</li>
-      <li>Django</li>
-      <li>JavaScript</li>
-    </ul>
-
-    <p>
-      De forma a consolidar todos os conhecimentos, será feito um laboratório
-      semanal, de entrega obrigatória, de aplicação da matéria lecionada. Irá
-      ser desenvolvido também um projeto.
-    </p>
-    <img src="images/wordcloud.png" />
-  </body>
-</html>
+<head>
+  <title>PW Labs</title>
+</head>
+<body>
+  <h1>Programação Web: Laboratórios</h1>
+  <p>
+    <ol>
+        <li><a href="lab1/index.html">Laboratório 1</a>: Conhecer a Internet com a minha primeira página Web</li> 
+        <li><a href="lab2/index.html">Laboratório 2</a>: Explorando o HTML com o meu primeiro website</li>
+    </ol>
+  </p>
+  <p>
+      Informações:
+      <il>
+          <li>Nome: Martim Teixeira</li>
+          <li>Número Aluno: a22006053</li>
+          <li>Curso: Informática de Gestão</li>
+          <li>Univeridade: Universidade Lusófona de Humanidades e Tecnologias</li>
+      </il>
+  </p>
+</body>
