--- a/lab1/report.html
+++ b/lab1/report.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Conhecer a internet</title>
-    <p><a href="index.html">Programação Web</a>  <a href="report.html">A Internet e a Web</a></p>
+    <p><a href="index.html">Programação Web</a>
+    <a href="../index.html">Laboratórios PW</a>
   </head>
   <body>
     <h1>A Internet e a Web</h1>
