--- a/lab2/local.html
+++ b/lab2/local.html
@@ -13,8 +13,8 @@
     <h1>Ericeira - Onde o Mar é Mais Azul</h1>
     <img src="images/ericeira.jpg" alt="Ericeira" /><br />
     <p>
-      Menu: <a href="index.html"><b>Introdução</b></a> |
-      <a href="local.html">Localização</a> |
+      Menu: <a href="index.html">Introdução</a> |
+      <a href="local.html"><b>Localização</b></a> |
       <a href="multimedia.html">Multimédia</a> |
       <a href="info.html">Informações</a> |
       <a href="../index.html">Home</a>
