--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<head>
+<html lang = "pt">
+  <head>
   <title>PW Labs</title>
-</head>
-<body>
-  <h1>Programação Web: Laboratórios</h1>
-  <p>
-    <ol>
-        <li><a href="lab1/index.html">Laboratório 1</a>: Conhecer a Internet com a minha primeira página Web</li> 
-        <li><a href="lab2/index.html">Laboratório 2</a>: Explorando o HTML com o meu primeiro website</li>
-    </ol>
-  </p>
-  <p>
+  </head>
+  <body>
+    <h1>Programação Web: Laboratórios</h1>
+    <p>
+      <ol>
+          <li><a href="lab1/index.html">Laboratório 1</a>: Conhecer a Internet com a minha primeira página Web</li> 
+          <li><a href="lab2/index.html">Laboratório 2</a>: Explorando o HTML com o meu primeiro website</li>
+      </ol>
+    </p>
+    <p>
       Informações:
       <il>
-          <li>Nome: Martim Teixeira</li>
-          <li>Número Aluno: a22006053</li>
-          <li>Curso: Informática de Gestão</li>
-          <li>Univeridade: Universidade Lusófona de Humanidades e Tecnologias</li>
+        <li>Nome: Martim Teixeira</li>
+        <li>Número Aluno: a22006053</li>
+        <li>Curso: Informática de Gestão</li>
+        <li>Univeridade: Universidade Lusófona de Humanidades e Tecnologias</li>
       </il>
   </p>
 </body>
+</html>
+
