--- a/lab1/index.html
+++ b/lab1/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8" />
     <title>A minha primeira página</title>
     <p>
-      <a href="index.html">Programação Web</a>
       <a href="report.html">A Internet e a Web</a>
-      <a href="../pw-labs-MartimTeixeira-a22006053/index.html"
-        >Laboratórios PW</a
-      >
+      <a href="../index.html">Laboratórios PW</a>
     </p>
   </head>
   <body>
