--- a/lab2/local.html
+++ b/lab2/local.html
@@ -10,7 +10,16 @@
   </head>
   <body>
     <body style="background-color: rgb(208, 252, 255)"></body>
-    <h1>Ericeira - Onde o Mar é Mais Azul</h1>
+    <style>
+      .topnav {
+        background-color: rgb(255, 255, 255);
+        overflow: hidden;
+      }
+    </style>
+    <div class="topnav" id="myTopnav">
+      <h1 style="text-align: center">Ericeira - Onde o Mar é Mais Azul</h1>
+    </div>
+    <br />
     <img src="images/ericeira.jpg" alt="Ericeira" /><br />
     <p>
       Menu: <a href="index.html">Introdução</a> |
@@ -19,5 +28,20 @@
       <a href="info.html">Informações</a> |
       <a href="../index.html">Home</a>
     </p>
+    <h2>Localização</h2>
+    <p>
+      Ericeira é uma vila turística situada a 35 km a noroeste do centro de
+      Lisboa, a 18 km de Sintra e a 8 km de Mafra. É uma freguesia portuguesa do
+      município de Mafra, com 12,19 km² de área
+    </p>
+    <h3>Mapa do Google Maps:</h3>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24815.736860043955!2d-9.416574528259108!3d38.97041905744011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1f270eadfd6f97%3A0x742c0c610c10aa4c!2sEriceira!5e0!3m2!1spt-BR!2spt!4v1645740804408!5m2!1spt-BR!2spt"
+      width="400"
+      height="300"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+    ></iframe>
   </body>
 </html>
