--- a/lab2/multimedia.html
+++ b/lab2/multimedia.html
@@ -10,7 +10,16 @@
   </head>
   <body>
     <body style="background-color: rgb(208, 252, 255)"></body>
-    <h1>Ericeira - Onde o Mar é Mais Azul</h1>
+    <style>
+      .topnav {
+        background-color: rgb(255, 255, 255);
+        overflow: hidden;
+      }
+    </style>
+    <div class="topnav" id="myTopnav">
+      <h1 style="text-align: center">Ericeira - Onde o Mar é Mais Azul</h1>
+    </div>
+    <br />
     <img src="images/ericeira.jpg" alt="Ericeira" /><br />
     <p>
       Menu: <a href="index.html">Introdução</a> |
@@ -18,6 +27,78 @@
       <a href="multimedia.html"><b>Multimédia</b></a> |
       <a href="info.html">Informações</a> |
       <a href="../index.html">Home</a>
+    </p>
+    <h2>Multimédia</h2>
+    <h3>Fotografias</h3>
+    <ul>
+      <li>
+        A primeira imagem é referente a uma estátua bastante conhecida na
+        Ericeira, mais concretamente na Praia de Ribeira D'Ilhas.
+      </li>
+      <li>A segunda imagem é a Praia dos Pescadores.</li>
+      <li>
+        A terceira imagem é o centro da vila, mais conhecido como jogo da bola.
+      </li>
+    </ul>
+    <a href="images/guardiao-ericeira-grande.jpg" target="foto"
+      ><img
+        src="images/guardiao-ericeira-grande.jpg"
+        alt="Estatua"
+        height="100"
+    /></a>
+    <a href="images/guardiao-ericeira - pequena.jpg" target="foto"
+      ><img
+        src="images/guardiao-ericeira - pequena.jpg"
+        alt="Estatua"
+        height="100"
+    /></a>
+    <a href="images/praia-grande.jpg" target="foto"
+      ><img src="images/praia-grande.jpg" alt="Praia" height="100"
+    /></a>
+    <a href="images/praia-pequena.jpg" target="foto"
+      ><img src="images/praia-pequena.jpg" alt="Praia" height="100"
+    /></a>
+    <a href="images/rua-grande.jpg" target="foto"
+      ><img src="images/rua-grande.jpg" alt="Rua" height="100"
+    /></a>
+    <a href="images/rua - pequena.jpg" target="foto"
+      ><img src="images/rua - pequena.jpg" alt="Rua" height="100" /></a
+    ><br />
+    <iframe
+      frameborder="0"
+      scrolling="no"
+      width="640px"
+      height="450px"
+      src="images/guardiao-ericeira-grande.jpg"
+      name="foto"
+    ></iframe
+    ><br />
+
+    <h3>Vídeo</h3>
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/3D9krONZSCo"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe>
+    <h3 style="text-align: center">Poema</h3>
+    <p style="text-align: center">
+      <i>Ericeira - Meu berço, à flor do mar</i><br /><b>Autora:</b> Maria da
+      Assunção Freire<br /><br />Oh, minha terra, do “mar salgado”<br />do ar
+      lavado, das calçadinhas<br />do sol mais louro<br />ancoradouro das
+      andorinhas.<br /><br />Terra das pombas, filhas das ondas<br />em
+      turbilhão<br />asas erguidas, cruzes perdidas<br />na imensidão.<br /><br />Terra
+      das praias d´areais louros<br />dos miradouros, a cada canto<br />
+      Manhãs de bruma, tardes d´espuma<br />do meu encanto.<br /><br />Oh, minha
+      terra das penedias<br />das invernias, tanta aflição<br />bravas
+      nortadas<br />fúrias eivadas de maldição.<br /><br />Calvários brancos,
+      sabe Deus quantos<br />no mar sem fim<br />
+      dores apagadas, santificadas<br />rogai por mim.<br /><br />Terra d´
+      esperanças<br />onde eu de tranças, bibe de folhos<br />me vi crescer<br />cobre
+      os meus olhos<br />quando eu morrer.<br />
     </p>
   </body>
 </html>
