--- a/lab2/index.html
+++ b/lab2/index.html
@@ -10,7 +10,16 @@
   </head>
   <body>
     <body style="background-color: rgb(208, 252, 255)"></body>
-    <h1>Ericeira - Onde o Mar é Mais Azul</h1>
+    <style>
+      .topnav {
+        background-color: rgb(255, 255, 255);
+        overflow: hidden;
+      }
+    </style>
+    <div class="topnav" id="myTopnav">
+      <h1 style="text-align: center">Ericeira - Onde o Mar é Mais Azul</h1>
+    </div>
+    <br />
     <img src="images/ericeira.jpg" alt="Ericeira" /><br />
     <p>
       Menu: <a href="index.html"><b>Introdução</b></a> |
