--- a/lab2/info.html
+++ b/lab2/info.html
@@ -10,7 +10,16 @@
   </head>
   <body>
     <body style="background-color: rgb(208, 252, 255)"></body>
-    <h1>Ericeira - Onde o Mar é Mais Azul</h1>
+    <style>
+      .topnav {
+        background-color: rgb(255, 255, 255);
+        overflow: hidden;
+      }
+    </style>
+    <div class="topnav" id="myTopnav">
+      <h1 style="text-align: center">Ericeira - Onde o Mar é Mais Azul</h1>
+    </div>
+    <br />
     <img src="images/ericeira.jpg" alt="Ericeira" /><br />
     <p>
       Menu: <a href="index.html">Introdução</a> |
@@ -28,7 +37,7 @@
       <hr>
       É uma vila muito antiga, presumivelmente local de passagem e instalação
       dos Fenícios.<br />
-      Reza a lenda que o nome <i>Ericeira</i> significa, na origem, <u>"terra de ouriços"</u>,
+      Reza a lenda que o nome <i>Ericeira</i> significa, na origem, "terra de ouriços",
       devido aos numerosos ouriços do mar que abundavam nas suas praias. No
       entanto, investigações mais recentes apontam o ouriço-cacheiro e não o do
       mar como inspirador do nome. Com a descoberta de um exemplar do antigo
@@ -59,9 +68,44 @@
       segunda do mundo.
     </p>
     <ul style="list-style-type:square;">
-      <li>Texto</li>
-      <li>Texto</li>
+      <li>A <a href="index.html">página</a> base do website.</li>
+      <li>A <a href="local.html">localização</a> é privilegiada.</li>
+      <li>Podemos encontrar de tudo sobre a Ericeira na <a href="multimedia.html">Internet</a>.</li>
     </ul>
-    <img src="images/wordcloud.jpg" alt="worldcloud" /><br />
+    <img src="images/wordcloud.jpg" alt="worldcloud"/><br />
+    <h3>Informações</h3>
+    <style>table, th, td {
+      border: 1px solid black;
+      border-collapse: collapse;
+    }
+    </style>
+    <table>
+      <tr>
+        <th rowspan="2">Demografia</th>
+        <td style="text-align:center">População</td>
+        <td style="text-align:center">12 368 hab</td>
+      </tr>
+      <tr>
+        <td style="text-align:center">Densidade Pop.</td>
+        <td style="text-align:center">1 014,6 hab/km²</td>
+      </tr>
+      <tr>
+        <th rowspan="3">Geografia</th>
+        <td style="text-align:center">Área</td>
+        <td style="text-align:center">12,19 km²</td>
+      </tr>
+      <tr>
+        <td style="text-align:center">Região</td>
+        <td style="text-align:center">Lisboa</td>
+      </tr>
+      <tr>
+        <td style="text-align:center">País</td>
+        <td style="text-align:center">Portugal</td>
+      </tr>
+      <tr>
+        <th>Website</th>
+        <td colspan="2" style="text-align:center"><a href="https://jfericeira.weebly.com/">https://jfericeira.weebly.com/</a></td>
+      </tr>
+    </table>
   </body>
 </html>
