--- a/lab2/info.html
+++ b/lab2/info.html
@@ -28,83 +28,71 @@
       <a href="info.html"><b>Informações</b></a> |
       <a href="../index.html">Home</a>
     </p>
-    <h2>Introdução</h2>
-    <p>
-      A <i>Ericeira</i> é uma vila turística situada a 35 km a noroeste do centro de
-      Lisboa, a 18 km de Sintra e a 8 km de Mafra. É uma freguesia portuguesa do
-      município de Mafra, conhecida pelos ouriços, um <b>doce</b> 🧁 habitual da terra,
-      e pelo <b>mar</b> ⛵.<br />
-      <hr>
-      É uma vila muito antiga, presumivelmente local de passagem e instalação
-      dos Fenícios.<br />
-      Reza a lenda que o nome <i>Ericeira</i> significa, na origem, "terra de ouriços",
-      devido aos numerosos ouriços do mar que abundavam nas suas praias. No
-      entanto, investigações mais recentes apontam o ouriço-cacheiro e não o do
-      mar como inspirador do nome. Com a descoberta de um exemplar do antigo
-      brasão da Vila, hoje no Arquivo-Museu da Misericórdia, confirmou-se que o
-      animal ali desenhado é, de facto, um ouriço-cacheiro 🦔.<br />
-      A região da <i>Ericeira</i> é bem conhecida em termos de surf 🏄 devido às ondas
-      🌊 da zona, que os surfistas dizem ser diferentes. Tem praias muito
-      conceituadas para a prática do surf como a praia da <u>Ribeira d' Ilhas</u>
-      (reserva mundial do surf), praia dos <U>Coxos em Ribamar</U>, entre muitas
-      outras.<br />
-      A <i>Ericeira</i> é de resto a primeira reserva mundial 🌍 de surf da Europa e a
-      segunda do mundo.
-      <hr>
-      É uma vila muito antiga, presumivelmente local de passagem e instalação
-      dos Fenícios.<br />
-      Reza a lenda que o nome Ericeira significa, na origem, "terra de ouriços",
-      devido aos numerosos ouriços do mar que abundavam nas suas praias. No
-      entanto, investigações mais recentes apontam o ouriço-cacheiro e não o do
-      mar como inspirador do nome. Com a descoberta de um exemplar do antigo
-      brasão da Vila, hoje no Arquivo-Museu da Misericórdia, confirmou-se que o
-      animal ali desenhado é, de facto, um ouriço-cacheiro 🦔.<br />
-      A região da Ericeira é bem conhecida em termos de surf 🏄 devido às ondas
-      🌊 da zona, que os surfistas dizem ser diferentes. Tem praias muito
-      conceituadas para a prática do surf como a praia da Ribeira d' Ilhas
-      (reserva mundial do surf), praia dos Coxos em Ribamar, entre muitas
-      outras.<br />
-      A Ericeira é de resto a primeira reserva mundial 🌍 de surf da Europa e a
-      segunda do mundo.
-    </p>
-    <ul style="list-style-type:square;">
-      <li>A <a href="index.html">página</a> base do website.</li>
-      <li>A <a href="local.html">localização</a> é privilegiada.</li>
-      <li>Podemos encontrar de tudo sobre a Ericeira na <a href="multimedia.html">Internet</a>.</li>
-    </ul>
-    <img src="images/wordcloud.jpg" alt="worldcloud"/><br />
     <h3>Informações</h3>
-    <style>table, th, td {
-      border: 1px solid black;
-      border-collapse: collapse;
-    }
+    <style>
+      table,
+      th,
+      td {
+        border: 1px solid black;
+        border-color: #000000;
+      }
+      th,
+      td {
+        background-color: #ffffff;
+      }
+      table {
+        background-color: #000000;
+      }
     </style>
+    <p>Tabela de informações relativas à Ericeira.</p>
     <table>
       <tr>
         <th rowspan="2">Demografia</th>
-        <td style="text-align:center">População</td>
-        <td style="text-align:center">12 368 hab</td>
+        <td style="text-align: center">População</td>
+        <td style="text-align: center">12 368 hab</td>
       </tr>
       <tr>
-        <td style="text-align:center">Densidade Pop.</td>
-        <td style="text-align:center">1 014,6 hab/km²</td>
+        <td style="text-align: center">Densidade Pop.</td>
+        <td style="text-align: center">1 014,6 hab/km²</td>
       </tr>
       <tr>
-        <th rowspan="3">Geografia</th>
-        <td style="text-align:center">Área</td>
-        <td style="text-align:center">12,19 km²</td>
+        <th rowspan="5">Geografia</th>
+        <td style="text-align: center">Área</td>
+        <td style="text-align: center">12,19 km²</td>
       </tr>
       <tr>
-        <td style="text-align:center">Região</td>
-        <td style="text-align:center">Lisboa</td>
+        <td style="text-align: center">Código Postal</td>
+        <td style="text-align: center">2655</td>
       </tr>
       <tr>
-        <td style="text-align:center">País</td>
-        <td style="text-align:center">Portugal</td>
+        <td style="text-align: center">Município</td>
+        <td style="text-align: center">Mafra</td>
+      </tr>
+      <tr>
+        <td style="text-align: center">Região</td>
+        <td style="text-align: center">Lisboa</td>
+      </tr>
+      <tr>
+        <td style="text-align: center">País</td>
+        <td style="text-align: center">Portugal</td>
+      </tr>
+      <tr>
+        <th>Presidente</th>
+        <td colspan="2" style="text-align: center">
+          Joaquim Filipe Abreu dos Santos
+        </td>
+      </tr>
+      <tr>
+        <th>Gentílico</th>
+        <td colspan="2" style="text-align: center">Ericeirense, Jagoz</td>
       </tr>
       <tr>
         <th>Website</th>
-        <td colspan="2" style="text-align:center"><a href="https://jfericeira.weebly.com/">https://jfericeira.weebly.com/</a></td>
+        <td colspan="2" style="text-align: center">
+          <a href="https://jfericeira.weebly.com/"
+            >https://jfericeira.weebly.com/</a
+          >
+        </td>
       </tr>
     </table>
   </body>
