--- a/lab2/multimedia.html
+++ b/lab2/multimedia.html
@@ -29,7 +29,11 @@
       <a href="../index.html">Home</a>
     </p>
     <h2>Multimédia</h2>
-    <h3>Fotografias</h3>
+    <p>
+      <a href="#fotografias">Fotografias</a> | <a href="#video">Vídeo</a> |
+      <a href="#poema">Poema</a>
+    </p>
+    <h3 id="fotografias">Fotografias</h3>
     <ul>
       <li>
         A primeira imagem é referente a uma estátua bastante conhecida na
@@ -74,7 +78,7 @@
     ></iframe
     ><br />
 
-    <h3>Vídeo</h3>
+    <h3 id="video">Vídeo</h3>
     <iframe
       width="560"
       height="315"
@@ -84,7 +88,7 @@
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
     ></iframe>
-    <h3 style="text-align: center">Poema</h3>
+    <h3 style="text-align: center" id="poema">Poema</h3>
     <p style="text-align: center">
       <i>Ericeira - Meu berço, à flor do mar</i><br /><b>Autora:</b> Maria da
       Assunção Freire<br /><br />Oh, minha terra, do “mar salgado”<br />do ar
