--- a/lab2/index.html
+++ b/lab2/index.html
@@ -28,5 +28,50 @@
       <a href="info.html">Informações</a> |
       <a href="../index.html">Home</a>
     </p>
+    <h2>Introdução</h2>
+    <p>
+      A <i>Ericeira</i> é uma vila turística situada a 35 km a noroeste do centro de
+      Lisboa, a 18 km de Sintra e a 8 km de Mafra. É uma freguesia portuguesa do
+      município de Mafra, conhecida pelos ouriços, um <b>doce</b> 🧁 habitual da terra,
+      e pelo <b>mar</b> ⛵.<br />
+      <hr>
+      É uma vila muito antiga, presumivelmente local de passagem e instalação
+      dos Fenícios.<br />
+      Reza a lenda que o nome <i>Ericeira</i> significa, na origem, "terra de ouriços",
+      devido aos numerosos ouriços do mar que abundavam nas suas praias. No
+      entanto, investigações mais recentes apontam o ouriço-cacheiro e não o do
+      mar como inspirador do nome. Com a descoberta de um exemplar do antigo
+      brasão da Vila, hoje no Arquivo-Museu da Misericórdia, confirmou-se que o
+      animal ali desenhado é, de facto, um ouriço-cacheiro 🦔.<br />
+      A região da <i>Ericeira</i> é bem conhecida em termos de surf 🏄 devido às ondas
+      🌊 da zona, que os surfistas dizem ser diferentes. Tem praias muito
+      conceituadas para a prática do surf como a praia da <u>Ribeira d' Ilhas</u>
+      (reserva mundial do surf), praia dos <U>Coxos em Ribamar</U>, entre muitas
+      outras.<br />
+      A <i>Ericeira</i> é de resto a primeira reserva mundial 🌍 de surf da Europa e a
+      segunda do mundo.
+      <hr>
+      É uma vila muito antiga, presumivelmente local de passagem e instalação
+      dos Fenícios.<br />
+      Reza a lenda que o nome Ericeira significa, na origem, "terra de ouriços",
+      devido aos numerosos ouriços do mar que abundavam nas suas praias. No
+      entanto, investigações mais recentes apontam o ouriço-cacheiro e não o do
+      mar como inspirador do nome. Com a descoberta de um exemplar do antigo
+      brasão da Vila, hoje no Arquivo-Museu da Misericórdia, confirmou-se que o
+      animal ali desenhado é, de facto, um ouriço-cacheiro 🦔.<br />
+      A região da Ericeira é bem conhecida em termos de surf 🏄 devido às ondas
+      🌊 da zona, que os surfistas dizem ser diferentes. Tem praias muito
+      conceituadas para a prática do surf como a praia da Ribeira d' Ilhas
+      (reserva mundial do surf), praia dos Coxos em Ribamar, entre muitas
+      outras.<br />
+      A Ericeira é de resto a primeira reserva mundial 🌍 de surf da Europa e a
+      segunda do mundo.
+    </p>
+    <ul style="list-style-type:square;">
+      <li>A <a href="index.html">página</a> base do website.</li>
+      <li>A <a href="local.html">localização</a> é privilegiada.</li>
+      <li>Podemos encontrar de tudo sobre a Ericeira na <a href="multimedia.html">Internet</a>.</li>
+    </ul>
+    <img src="images/wordcloud.jpg" alt="worldcloud"/><br />
   </body>
 </html>
