--- a/lab3/html5-css.html
+++ b/lab3/html5-css.html
@@ -175,27 +175,46 @@
           <tr>
             <td>classe</td>
             <td>😀</td>
-            <td>Explicação</td>
+            <td>
+              Associa um nome a um estilo, sendo aplicado aos elementos<br />
+              que tenham class="qualquer coisa". Foi utilizado em todas as<br />
+              páginas tendo vários seletores em cada página
+            </td>
           </tr>
           <tr>
             <td>id</td>
             <td>😀</td>
-            <td>Explicação</td>
+            <td>
+              O atributo id permite identificar univocamente um elemento <br />
+              do HTML, foi utilizado em todas as páginas tendo vários <br />
+              seletores em cada página
+            </td>
           </tr>
           <tr>
             <td>atributo</td>
             <td>😀</td>
-            <td>Explicação</td>
+            <td>
+              Seletores que se aplicam a atributos de elementos, utilizado
+              <br />
+              em alguns links nas páginas multimédia e info
+            </td>
           </tr>
           <tr>
             <td>pseudo-classe</td>
             <td>😀</td>
-            <td>Explicação</td>
+            <td>
+              Seletor associado ao estado de um elemento, utilizado em <br />
+              várias páginas como por exemplo nos links das mesmas
+            </td>
           </tr>
           <tr>
             <td>pseudo-elemento</td>
             <td>😀</td>
-            <td>Explicação</td>
+            <td>
+              Regras que se aplicam a partes de elementos, utilizado em <br />
+              todas as páginas, como por exemplo no h2, onde todos <br />
+              têm a primeira letra maior
+            </td>
           </tr>
         </table>
       </section>
