--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="author" content="Martim Teixeira" />
     <link rel="portugal icon" type="images/Portugal.ico" href="images/Portugal.ico" />
     <link rel="stylesheet" href="estilos.css" />
     <title>PW Labs</title>
@@ -52,7 +54,19 @@
             <a href="lab3/index.html">Website com Quizz e seletores CSS</a>
           </p>
         </details>
+        <br />
+        <details>
+          <summary>Laboratório 4</summary>
+          <p>
+            <a href="lab4/index.html">SPA com layout responsivo baseado em Flexbox e Grid</a>
+          </p>
+        </details>
       </p>
+    </section>
+    <section class="">
+      <footer>
+        <p>MT 2022</p>
+      </footer>
     </section>
   </body>
 </html>
