--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta name="author" content="Martim Teixeira" />
     <link rel="portugal icon" type="images/Portugal.ico" href="images/Portugal.ico" />
     <link rel="stylesheet" href="estilos.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Saira:wght@200&display=swap" rel="stylesheet">
     <title>PW Labs</title>
   </head>
   <body>
-    <div class="main">
+    <header>
+      <div>
       <h1>Programação Web: Laboratórios</h1>
       <br />
     </div>
+    </header>
     <section class="sidenav">
       <div class="image">
         <img src="images/Fotografia.jpeg" alt="Eu" />
@@ -61,9 +66,16 @@
             <a href="lab4/index.html">SPA com layout responsivo baseado em Flexbox e Grid</a>
           </p>
         </details>
+        <br />
+        <details>
+          <summary>Laboratório 5</summary>
+          <p>
+            <a href="lab5/index.html">SPA com boas práticas de web design</a>
+          </p>
+        </details>
       </p>
     </section>
-    <section class="">
+    <section>
       <footer>
         <p>MT 2022</p>
       </footer>
