--- a/lab5/index.html
+++ b/lab5/index.html
@@ -183,5 +183,112 @@
         <button type="button">Clique aqui!</button>
       </div>
     </div>
+    <div>
+      <h1>Praias de Portugal</h1>
+    </div>
+    <div class="parallax"></div>
+    <div class="parallax2">
+      <p>
+        Portugal é um país no sul da Europa, localizado na Península Ibérica,
+        que faz fronteira com a Espanha. Sua localização às margens do Oceano
+        Atlântico influenciou muitos aspectos da cultura do país: o bacalhau
+        salgado e as sardinhas assadas são pratos típicos nacionais, as praias
+        do Algarve são destinos muito procurados e boa parte da arquitetura do
+        país data dos séculos XVI a XIX, quando Portugal era um poderoso império
+        marítimo.
+      </p>
+    </div>
+    <div class="parallax"></div>
+    <div class="parallax2">
+      <p>
+        Uma extensa costa, onde todas as praias têm areia branca e fina, um
+        verão longo e muitas horas de sol distribuídas pelo ano inteiro fazem de
+        Portugal um destino natural de férias. Os comentários e as reportagens
+        nos media internacionais que reconhecem a qualidade e a beleza das
+        praias portuguesas são frequentes. E não é por acaso que temos 352
+        praias galardoadas com a Bandeira Azul da Europa e 214 consideradas
+        Praia Acessível! Sabemos que não é fácil escolher uma, porque a
+        variedade é grande e a paisagem vai mudando ao longo da costa, mas aqui
+        lembramos algumas das praias eleitas.
+      </p>
+    </div>
+    <div class="parallax"></div>
+    <div>
+      <h1 id="destinosSonho">Grelha de Fotografias</h1>
+    </div>
+    <div class="fotos">
+      <div class="foto1">
+        <img
+          src="https://source.unsplash.com/77zGnfU_SFU/300x400"
+          alt="palmeiras"
+        />
+      </div>
+      <div class="foto2">
+        <img
+          src="https://source.unsplash.com/CcyP9DlIdrM/300x400"
+          alt="praia"
+        />
+      </div>
+      <div class="foto3">
+        <img
+          src="https://source.unsplash.com/gOzZ9GSlEKw/300x400"
+          alt="barco"
+        />
+      </div>
+      <div class="foto4">
+        <img
+          src="https://source.unsplash.com/SYx3UCHZJlo/300x400"
+          alt="oculos"
+        />
+      </div>
+      <div class="foto5">
+        <img
+          src="https://source.unsplash.com/okVXy9tG3KY/300x400"
+          alt="praia2"
+        />
+      </div>
+      <div class="foto6">
+        <img
+          src="https://source.unsplash.com/7XAM0J3dNQM/300x400"
+          alt="passadeira"
+        />
+      </div>
+      <div class="foto7">
+        <img src="https://source.unsplash.com/JP23z_-dA74/300x400" alt="mar" />
+      </div>
+      <div class="foto8">
+        <img src="https://source.unsplash.com/6mze64HRU2Q/300x400" alt="van" />
+      </div>
+      <div class="foto9">
+        <img
+          src="https://source.unsplash.com/Q_LffdLyQqk/300x400"
+          alt="chapeu"
+        />
+      </div>
+      <div class="foto10">
+        <img src="https://source.unsplash.com/ZB91R7l7j8Q/300x400" alt="mar2" />
+      </div>
+      <div class="foto11">
+        <img
+          src="https://source.unsplash.com/GyDktTa0Nmw/300x400"
+          alt="ondas"
+        />
+      </div>
+      <div class="foto12">
+        <img
+          src="https://source.unsplash.com/XGKaRnWjv1c/300x400"
+          alt="santorini"
+        />
+      </div>
+    </div>
+    <div>
+      <h1>Animações</h1>
+    </div>
+    <div class="animacoes">
+      <div class="fotoAnimacoes1"></div>
+      <div class="fotoAnimacoes2"></div>
+      <div class="fotoAnimacoes3"></div>
+      <div class="fotoAnimacoes4"></div>
+    </div>
   </body>
 </html>
