--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
       <a href="#labs">Laboratórios</a>
     </header>
     <section class="heroImage">
-      <div class="image">
+      <div>
         <img src="images/228.JPG" alt="Eu" />
         <h1><b>Martim Teixeira</b></h1>
-      </div>
-      <div id="center">
         <h2>Um Programador em fase de ascenção</h2>
       </div>
     </section>
