--- a/lab5/index.html
+++ b/lab5/index.html
@@ -217,7 +217,7 @@
       <h1 id="destinosSonho">Grelha de Fotografias</h1>
     </div>
     <div class="fotos">
-      <div class="foto1">
+      <div class="foto1 middle text">
         <img
           src="https://source.unsplash.com/77zGnfU_SFU/300x400"
           alt="palmeiras"
